// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements/Progress Default smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div role="progressbar"
       aria-valuenow="50"
       aria-valuemin="0"
       aria-valuemax="100"
       class="w-full bg-gray-200 dark:bg-gray-700 relative overflow-hidden h-4 rounded-full"
  >
    <div class="transition-all duration-300 flex items-center justify-center progress-bar ltr:origin-left rtl:origin-right rounded-full bg-blue-600 dark:bg-blue-500 h-4 hover:brightness-110 active:brightness-90"
         style="width: 50%;"
    >
    </div>
  </div>
</div>
`;

exports[`Elements/Progress ProgressExamples smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="space-y-4">
    <div>
      <h3 class="mb-2">
        Progress Examples
      </h3>
      <div class="space-y-2">
        <div role="progressbar"
             aria-valuenow="0"
             aria-valuemin="0"
             aria-valuemax="100"
             class="w-full bg-gray-200 dark:bg-gray-700 relative overflow-hidden h-4 rounded-full"
        >
          <div class="transition-all duration-300 flex items-center justify-center progress-bar ltr:origin-left rtl:origin-right rounded-full bg-blue-600 dark:bg-blue-500 h-4 hover:brightness-110 active:brightness-90"
               style="width: 0%;"
          >
            <span class="text-xs text-white transition-opacity duration-200">
              0%
            </span>
          </div>
        </div>
        <div role="progressbar"
             aria-valuenow="25"
             aria-valuemin="0"
             aria-valuemax="100"
             class="w-full bg-gray-200 dark:bg-gray-700 relative overflow-hidden h-4 rounded-full"
        >
          <div class="transition-all duration-300 flex items-center justify-center progress-bar ltr:origin-left rtl:origin-right rounded-full bg-blue-600 dark:bg-blue-500 h-4 hover:brightness-110 active:brightness-90"
               style="width: 25%;"
          >
            <span class="text-xs text-white transition-opacity duration-200">
              25%
            </span>
          </div>
        </div>
        <div role="progressbar"
             aria-valuenow="50"
             aria-valuemin="0"
             aria-valuemax="100"
             class="w-full bg-gray-200 dark:bg-gray-700 relative overflow-hidden h-4 rounded-full"
        >
          <div class="transition-all duration-300 flex items-center justify-center progress-bar ltr:origin-left rtl:origin-right rounded-full bg-blue-600 dark:bg-blue-500 h-4 hover:brightness-110 active:brightness-90"
               style="width: 50%;"
          >
            <span class="text-xs text-white transition-opacity duration-200">
              50%
            </span>
          </div>
        </div>
        <div role="progressbar"
             aria-valuenow="75"
             aria-valuemin="0"
             aria-valuemax="100"
             class="w-full bg-gray-200 dark:bg-gray-700 relative overflow-hidden h-4 rounded-full"
        >
          <div class="transition-all duration-300 flex items-center justify-center progress-bar ltr:origin-left rtl:origin-right rounded-full bg-blue-600 dark:bg-blue-500 h-4 hover:brightness-110 active:brightness-90"
               style="width: 75%;"
          >
            <span class="text-xs text-white transition-opacity duration-200">
              75%
            </span>
          </div>
        </div>
        <div role="progressbar"
             aria-valuenow="100"
             aria-valuemin="0"
             aria-valuemax="100"
             class="w-full bg-gray-200 dark:bg-gray-700 relative overflow-hidden h-4 rounded-full"
        >
          <div class="transition-all duration-300 flex items-center justify-center progress-bar ltr:origin-left rtl:origin-right rounded-full bg-blue-600 dark:bg-blue-500 h-4 hover:brightness-110 active:brightness-90"
               style="width: 100%;"
          >
            <span class="text-xs text-white transition-opacity duration-200">
              100%
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Elements/Progress Sizes smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="space-y-4">
    <div role="progressbar"
         aria-valuenow="50"
         aria-valuemin="0"
         aria-valuemax="100"
         class="w-full bg-gray-200 dark:bg-gray-700 relative overflow-hidden h-4 rounded-full"
    >
      <div class="transition-all duration-300 flex items-center justify-center progress-bar ltr:origin-left rtl:origin-right rounded-full bg-blue-600 dark:bg-blue-500 h-4 hover:brightness-110 active:brightness-90"
           style="width: 50%;"
      >
      </div>
    </div>
    <div role="progressbar"
         aria-valuenow="50"
         aria-valuemin="0"
         aria-valuemax="100"
         class="w-full bg-gray-200 dark:bg-gray-700 relative overflow-hidden h-1 rounded-full"
    >
      <div class="transition-all duration-300 flex items-center justify-center progress-bar ltr:origin-left rtl:origin-right rounded-full bg-blue-600 dark:bg-blue-500 h-1 hover:brightness-110 active:brightness-90"
           style="width: 50%;"
      >
      </div>
    </div>
    <div role="progressbar"
         aria-valuenow="50"
         aria-valuemin="0"
         aria-valuemax="100"
         class="w-full bg-gray-200 dark:bg-gray-700 relative overflow-hidden h-2.5 rounded-full"
    >
      <div class="transition-all duration-300 flex items-center justify-center progress-bar ltr:origin-left rtl:origin-right rounded-full bg-blue-600 dark:bg-blue-500 h-2.5 hover:brightness-110 active:brightness-90"
           style="width: 50%;"
      >
      </div>
    </div>
    <div role="progressbar"
         aria-valuenow="50"
         aria-valuemin="0"
         aria-valuemax="100"
         class="w-full bg-gray-200 dark:bg-gray-700 relative overflow-hidden h-5 rounded-full"
    >
      <div class="transition-all duration-300 flex items-center justify-center progress-bar ltr:origin-left rtl:origin-right rounded-full bg-blue-600 dark:bg-blue-500 h-5 hover:brightness-110 active:brightness-90"
           style="width: 50%;"
      >
      </div>
    </div>
    <div role="progressbar"
         aria-valuenow="50"
         aria-valuemin="0"
         aria-valuemax="100"
         class="w-full bg-gray-200 dark:bg-gray-700 relative overflow-hidden h-6 rounded-full"
    >
      <div class="transition-all duration-300 flex items-center justify-center progress-bar ltr:origin-left rtl:origin-right rounded-full bg-blue-600 dark:bg-blue-500 h-6 hover:brightness-110 active:brightness-90"
           style="width: 50%;"
      >
      </div>
    </div>
  </div>
</div>
`;

exports[`Elements/Progress StripedAnimated smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="space-y-4">
    <div role="progressbar"
         aria-valuenow="25"
         aria-valuemin="0"
         aria-valuemax="100"
         class="w-full bg-gray-200 dark:bg-gray-700 relative overflow-hidden h-4 rounded-full"
    >
      <div class="transition-all duration-300 flex items-center justify-center progress-bar ltr:origin-left rtl:origin-right striped-bar animated-progress rounded-full bg-blue-600 dark:bg-blue-500 h-4 hover:brightness-110 active:brightness-90"
           style="width: 25%;"
      >
        <span class="text-xs text-white transition-opacity duration-200">
          25%
        </span>
      </div>
    </div>
    <div role="progressbar"
         aria-valuenow="50"
         aria-valuemin="0"
         aria-valuemax="100"
         class="w-full bg-gray-200 dark:bg-gray-700 relative overflow-hidden h-4 rounded-full"
    >
      <div class="transition-all duration-300 flex items-center justify-center progress-bar ltr:origin-left rtl:origin-right striped-bar animated-progress rounded-full bg-blue-600 dark:bg-blue-500 h-4 hover:brightness-110 active:brightness-90"
           style="width: 50%;"
      >
        <span class="text-xs text-white transition-opacity duration-200">
          50%
        </span>
      </div>
    </div>
    <div role="progressbar"
         aria-valuenow="75"
         aria-valuemin="0"
         aria-valuemax="100"
         class="w-full bg-gray-200 dark:bg-gray-700 relative overflow-hidden h-4 rounded-full"
    >
      <div class="transition-all duration-300 flex items-center justify-center progress-bar ltr:origin-left rtl:origin-right striped-bar animated-progress rounded-full bg-blue-600 dark:bg-blue-500 h-4 hover:brightness-110 active:brightness-90"
           style="width: 75%;"
      >
        <span class="text-xs text-white transition-opacity duration-200">
          75%
        </span>
      </div>
    </div>
    <div role="progressbar"
         aria-valuenow="100"
         aria-valuemin="0"
         aria-valuemax="100"
         class="w-full bg-gray-200 dark:bg-gray-700 relative overflow-hidden h-4 rounded-full"
    >
      <div class="transition-all duration-300 flex items-center justify-center progress-bar ltr:origin-left rtl:origin-right striped-bar animated-progress rounded-full bg-blue-600 dark:bg-blue-500 h-4 hover:brightness-110 active:brightness-90"
           style="width: 100%;"
      >
        <span class="text-xs text-white transition-opacity duration-200">
          100%
        </span>
      </div>
    </div>
  </div>
</div>
`;
